# ReVoice

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json  ubuntu-24.04.gnu.clang
cmake/: AppVersion.cmake  CompileOptions.cmake  CompileOptionsLinux.cmake  CompileOptionsLinuxClang.cmake  CompileOptionsLinuxGNU.cmake  CompileOptionsWindows.cmake  CompileOptionsWindowsClang.cmake  CompileOptionsWindowsMSVC.cmake
dep/metamod/: CMakeLists.txt
dep/opus/: CMakeLists.txt
dep/opus/msvc/: Opus.vcxproj
dep/opus/silk/: define.h
dep/rehlsdk/: CMakeLists.txt
dep/silk/: CMakeLists.txt
dep/silk/src/: SKP_Silk_enc_API.c  SKP_Silk_structs.h  SKP_Silk_structs_FLP.h
dep/speex/: CMakeLists.txt
revoice/: CMakeLists.txt
revoice/msvc/: revoice.vcxproj
revoice/platform/windows/: revoice_mm.dll.def  revoice_mm.dll.rc.in
revoice/public/: IVoiceCodec.h
revoice/src/: IVoiceCodec.h  SteamP2PCodec.cpp  SteamP2PCodec.h  VoiceEncoder_Opus.cpp  VoiceEncoder_Opus.h  VoiceEncoder_Silk.cpp  VoiceEncoder_Silk.h  VoiceEncoder_Speex.h  appversion.h.in  dllapi.cpp  precompiled.h  public_amalgamation.cpp  revoice_cfg.cpp  revoice_main.cpp  revoice_main.h  revoice_main_.cpp  revoice_player.cpp  revoice_player.h  revoice_shared.h  sdk_util.cpp  utlbuffer.cpp  utlbuffer.h
tools/linux/: build.sh
tools/windows/: build.ps1  gendebconf.ps1
